recipe show with fixed media positioning and scaling, recipe detail is wrapped in a beautified card

--- a/your_nutritionist/frontend/src/Components/Header/Header.css
+++ b/your_nutritionist/frontend/src/Components/Header/Header.css
@@ -2,6 +2,8 @@
     background: #ffbd59;
     padding-top: .5rem;
     padding-bottom: .5rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
 }
 
 #brand-color {
