--- a/your_nutritionist/frontend/src/Components/MediaCard/MediaCard.css
+++ b/your_nutritionist/frontend/src/Components/MediaCard/MediaCard.css
@@ -47,26 +47,31 @@
 }
 
 .media-card{ 
-    height: 45vh;
-    width: 100%;
-    max-width: 100%;
+    height: 80vh;
     max-height: 100%;
-    background-color: black;
-    align-items: center;
+    background-color: rgb(185, 185, 185);
     position: absolute;
     transition: 0.5s;
     background-size: cover;
     box-shadow: 2px 2px gray;
+    width: 100%;
+    top: 5%;
+    left: 8%;
+    background-size: cover;
 }
 
 .left-card{
-    left: calc(50% - min(var(--media-card-width), 1140px) / 2 - var(--media-card-offset));
-    height: 35vh;
+    position: absolute;
+    top: 5%;
+    left: calc(60% - min(var(--media-card-width), 1140px) / 2 - var(--media-card-offset));
+    height: 50vh;
 }
 
 .right-card{
-    left: calc(50% - min(var(--media-card-width), 1140px) / 2 + var(--media-card-offset));
-    height: 35vh;
+    position: absolute;
+    top: 5%;
+    left: calc(10% - min(var(--media-card-width), 1140px) / 2 + var(--media-card-offset));
+    height: 50vh;
 }
 /* @media (min-width: 576px) {
     .media-card{
