--- a/your_nutritionist/frontend/src/Components/Rating/RatingCard/RatingCard.css
+++ b/your_nutritionist/frontend/src/Components/Rating/RatingCard/RatingCard.css
@@ -1,6 +1,8 @@
 .rating-card{
-    background-color: rgb(249, 249, 249);
     padding: 1rem;
+    margin: 1rem;
+    border: 1px solid rgb(228, 228, 228);
+    border-radius: 25px;
 }
 
 #bold {
