--- a/your_nutritionist/frontend/src/Containers/MediaShow/MediaShowContainer.css
+++ b/your_nutritionist/frontend/src/Containers/MediaShow/MediaShowContainer.css
@@ -3,6 +3,12 @@
     --media-card-width: 100%;
 }
 
+@media (min-width: 200px) {
+    :root {
+        --media-card-offset: 0px;
+        --media-card-width: 50vw;
+    }
+}
 
 @media (min-width: 576px) {
     :root{
@@ -14,7 +20,7 @@
 
 @media (min-width: 768px) {
     :root{
-        --media-card-offset: 50px;
+        --media-card-offset: 100px;
         --media-card-width: 100%;
     }
 }
@@ -22,7 +28,7 @@
 
 @media (min-width: 992px) {
     :root{
-        --media-card-offset: 100px;
+        --media-card-offset: 200px;
         --media-card-width: 70%;
     }
 }
@@ -30,65 +36,59 @@
 
 @media (min-width: 1200px) {
     :root{
-        --media-card-offset: 150px;
+        --media-card-offset: 1700px;
         --media-card-width: 70%;
     }
 }
 
 .media-container{
-    margin-top: 3rem;
-    height: 50vh;
-    max-width: 100vw;
-    margin-bottom: 10px;
+    height: 40vh;
+    max-width: 80vw;
+    margin: 2rem;
+    position: relative;
+    padding: 15%;
+
 }
 
 .left-field{
-    height:20vh;
-    width: 50px;
-    left: 0px;
     position: absolute;
-    vertical-align: baseline;
-    z-index: 100;
-    top: 27vh;
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
+    z-index: 2;
+    margin-top: 20vh;
+    left: 0;
+    height: 20vh; /* Remember to use var with this */
+
 }
 
 .right-field{
-    height:20vh;
-    width: 50px;
-    right: 0px;
-    vertical-align: baseline;
-    z-index: 100;
-    top: 27vh;
-    position:absolute;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
+    position: absolute;
+    z-index: 2;
+    margin-top: 20vh;
+    right: 0;
+    height: 20vh;
+
 }
 
 .left-media-cover{
-    width: var(--media-card-offset);
-    z-index: 100;
-    left: calc(50% - min(var(--media-card-width), 1140px) / 2 - var(--media-card-offset));
-    height: 35vh;
-    position:absolute;
+    display: none;
 }
 
 .right-media-cover{
-    width: var(--media-card-offset);
-    z-index: 100;
-    left: calc(50% + min(var(--media-card-width), 1140px) / 2);
-    height: 35vh;
-    position:absolute;
+    display: none;
 }
 
 .trigger-field{
-    width: 100%;
+    background: rgba(85, 85, 85, 0.6);
+    width: 5vw;
     height: 100%;
     border-radius: 5px;
+    font-size: calc(300% - var(--media-card-width));
+    text-align: center;
+    padding-top: 9vh;
+    line-height: 0;
+    color: rgb(195, 104, 0)
 }
 
 .trigger-field:hover {
-    background-color: RGB(64, 224, 208, 0.1);
+    background-color: rgba(195, 104, 0, 0.5);
     transition: 0.5s;
 }
